Prevent scrollbars on form inputs

--- a/less/deck/chart.less
+++ b/less/deck/chart.less
@@ -28,7 +28,7 @@
   font-size: 0.5em;
 }
 
-.sd-card-chart, .sd-card-form-input {
+.sd-card-chart {
     > div, > div > div  {
         height: 100%;
         width: 100%;
